# FileTransfer

./: .gitignore  BZip2-release-x86_64-data.cmake  BaseHandler.hpp  Boost-release-x86_64-data.cmake  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Main.cpp  Makefile  OpenSSL-release-x86_64-data.cmake  absl-Target-release.cmake  cmake_install.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  cryptoppTargets.cmake  deactivate_conanbuild.sh  deactivate_conanrun.sh  gRPC-Target-release.cmake  libbacktrace-release-x86_64-data.cmake  module-Protobuf-release-x86_64-data.cmake  protobuf-release-x86_64-data.cmake
.cmake/api/v1/reply/: cache-v2-efd706993a5810bd28ac.json  cmakeFiles-v1-7476781b3975b2619bf1.json  codemodel-v2-85d352dae579796c12c7.json  directory-Protoses-Release-f94e1cebed3c85db5ce6.json  index-2023-12-15T10-16-47-0786.json  target-Client-Release-9446ceb65d23f3ee8a69.json  target-Protoses-Release-7e06d4a9f3811e86c4b1.json  target-Server-Release-2cfd37a7761b9c60b836.json
.github/workflows/: GCC Build.yaml
Client/: CMakeLists.txt  Client.cpp  Client.hpp  Makefile
Protoses/: CMakeLists.txt  Makefile
Protoses/protos/: Files.proto  Person.grpc.pb.cc  Person.grpc.pb.h  Person.pb.h  Transfer.grpc.pb.cc  Transfer.grpc.pb.h  Transfer.pb.cc  Transfer.proto  User.grpc.pb.cc  User.grpc.pb.h  User.pb.cc  User.pb.h  User.proto
Server/: CMakeLists.txt  Main.cpp  Makefile  UserAuthorization.cc  UserAuthorization.hh
include/: FileSystem.hpp
protos/: User.proto
